--- a/index.qmd
+++ b/index.qmd
@@ -490,18 +490,16 @@ $$
 
 A model with constant slope
 ```{r}
-#| echo: true
-#| eval: true
 #| class-output: stan
+#| comment: ''
 tar_load(non_var_log)
 non_var_log
 ```
 
 A model with individual slopes
 ```{r}
-#| echo: true
-#| eval: true
 #| class-output: stan
+#| comment: ''
 tar_load(oui_var_log)
 oui_var_log
 ```
@@ -509,15 +507,17 @@ oui_var_log
 #### Square root transformed response
 
 a model with constant slope
-```{r, results='asis'}
+```{r}
 #| class-output: stan
+#| comment: ''
 tar_load(non_var_sqr)
-non_var_sqr
+non_var_sqr$print()
 ```
 
 A model with individual slopes
 ```{r}
 #| class-output: stan
+#| comment: ''
 tar_load(oui_var_sqr)
 oui_var_sqr
 ```
@@ -527,6 +527,7 @@ oui_var_sqr
 a model with constant slope
 ```{r}
 #| class-output: stan
+#| comment: ''
 tar_load(non_var_nonlin)
 non_var_nonlin
 ```
@@ -534,6 +535,7 @@ non_var_nonlin
 A model with individual slopes
 ```{r}
 #| class-output: stan
+#| comment: ''
 tar_load(oui_var_nonlin)
 oui_var_nonlin
 ```
